@@ -1,3 +1,8 @@
+2004-05-27  Dennis Smit  <ds@nerds-incorporated.org>
+
+	Removed the show_handle and show_frame preferences and support
+	for these preferences. Fixes bug #135393.
+
 2004-05-16  Davyd Madeley  <davyd@ucc.asn.au>
 
 	* src/mc-default-macros.h: Use more sensible macros. Use gnome-open
